# agent-pay

./: README.md  pyproject.toml
.github/workflows/: daily-install-test.yml  daily-install-test.yml.disabled  npm-publish.yml
brand/: create_ad.py  create_tweet_images.py  create_visuals.py  design-philosophy.md
docs/: builder-program.md  claude-code-setup.md  openapi-gpt-action.json
examples/: 06_live_translator_agent.py  07_autogen_payment.py
scripts/: .auto_post_state.json  .oauth_temp.json  .tweet_temp.txt  .twitter_agent_state.json  .twitter_agent_v2_state.json  .twitter_creds.json  .watch_state.json  auto_post.py  auto_tweet.py  health_check.js  monitor.py  tweet_one.js  twitter_agent.js  twitter_agent_v2.py  watch_kpis.py
src/agent_pay/: __init__.py  client.py  config.py  escrow.py  wallet.py
src/agent_pay/integrations/: crewai.py  langchain.py
src/api/: dashboard.html  main.py  requirements.txt
src/mcp/: package.json
src/sdk/integrations/: autogen.py
tests/: test_testnet.py
